# openhelos

./: LICENCE.txt  README.md  clusterer_test.py  morpher_test.py  pyproject.toml  requirements.txt
datasets/dicts/deu/: morphemes_benchmark.txt  small_corpus.txt  small_test.txt  small_train.txt
datasets/dicts/fra/: morphemes_benchmark.txt  small_corpus.txt  small_test.txt  small_train.txt
datasets/dicts/rus/: morphemes_benchmark.txt  small_corpus.txt  small_test.txt  small_train.txt
datasets/dicts/tur/: morphemes_benchmark.txt  small_corpus.txt  small_test.txt  small_train.txt
datasets/fep_ph_clusterer/: plain_strings.txt
docs/: CLUSTERER.md  COLUMN.md  COLUMN_MANAGER.md  MORPHER.md  SEMANTIC_SHEAVES.md  SIMPLICIAL_NEURON.md  SYMBOLIC_ARITHMETIC_DISCOVERER.md
formalisation/: EXPLANATION.md  SStructureIsomorphism.v
results/fep_morpher/: eval_vs_gold_deu.csv  eval_vs_gold_fra.csv  eval_vs_gold_rus.csv  eval_vs_gold_tur.csv
results/fep_ph_clusterer/: clusterer_output.json
results/temp/: morfessor_model.bin.txt  morfessor_model_deu.bin.txt  morfessor_model_fra.bin.txt  morfessor_model_rus.bin.txt  morfessor_model_tur.bin.txt
src/core/: fep_morpher.py  fep_ph_clasterer.py  semantic_sheaves.py  symbolic_arithmetic_discoverer_v1.py
src/early_experiments/: binstorage.py  column.py  column_manager.py  dictionary_methods.py  familiarity_score.py  namer.py  pairing_function.py  simpicial_neuron.py  sliding_window.py  stabiliser.py
src/experimental_setup/: __init__.py  clusterer_streamlit.py  morpher_setup.py  morpher_streamlit.py
(+6 files in other folders)
