[project]
name = "openhelos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "dill>=0.4.0",
    "graphviz>=0.20.3",
    "gudhi>=3.11.0",
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "morfessor>=2.0.6",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymorphy2>=0.9.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
